cs361/hw4/Spin/Src6.4.7/y.output
Terminals unused in grammar

   PREPROC
   MTYPE
   LABEL
   NON_ATOMIC


State 140 conflicts: 6 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | ltl
    8     | events
    9     | one_decl
   10     | utype
   11     | c_fcts
   12     | ns
   13     | semi
   14     | error

   15 l_par: '('

   16 r_par: ')'

   17 $@1: %empty

   18 $@2: %empty

   19 proc: inst proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

   20 proctype: PROCTYPE
   21         | D_PROCTYPE

   22 inst: %empty
   23     | ACTIVE
   24     | ACTIVE '[' const_expr ']'
   25     | ACTIVE '[' NAME ']'

   26 $@3: %empty

   27 init: INIT $@3 Opt_priority body

   28 $@4: %empty

   29 ltl: LTL optname2 $@4 ltl_body

   30 ltl_body: '{' full_expr OS '}'
   31         | error

   32 $@5: %empty

   33 claim: CLAIM optname $@5 body

   34 optname: %empty
   35        | NAME

   36 optname2: %empty
   37         | NAME

   38 $@6: %empty

   39 events: TRACE $@6 body

   40 $@7: %empty

   41 utype: TYPEDEF NAME '{' $@7 decl_lst '}'

   42 nm: NAME
   43   | INAME

   44 $@8: %empty

   45 ns: INLINE nm l_par $@8 args r_par

   46 c_fcts: ccode
   47       | cstate

   48 cstate: C_STATE STRING STRING
   49       | C_TRACK STRING STRING
   50       | C_STATE STRING STRING STRING
   51       | C_TRACK STRING STRING STRING

   52 ccode: C_CODE
   53      | C_DECL

   54 cexpr: C_EXPR

   55 $@9: %empty

   56 $@10: %empty

   57 body: '{' $@9 sequence OS $@10 '}'

   58 sequence: step
   59         | sequence MS step

   60 step: one_decl
   61     | XU vref_lst
   62     | NAME ':' one_decl
   63     | NAME ':' XU
   64     | stmnt

   65 $@11: %empty

   66 step: stmnt UNLESS $@11 stmnt
   67     | error

   68 vis: %empty
   69    | HIDDEN
   70    | SHOW
   71    | ISLOCAL

   72 asgn: %empty
   73     | ASGN

   74 one_decl: vis TYPE var_list
   75         | vis UNAME var_list
   76         | vis TYPE asgn '{' nlst '}'

   77 decl_lst: one_decl
   78         | one_decl SEMI decl_lst

   79 decl: %empty
   80     | decl_lst

   81 vref_lst: varref
   82         | varref ',' vref_lst

   83 var_list: ivar
   84         | ivar ',' var_list

   85 c_list: CONST
   86       | CONST ',' c_list

   87 ivar: vardcl
   88     | vardcl ASGN '{' c_list '}'
   89     | vardcl ASGN expr
   90     | vardcl ASGN ch_init

   91 ch_init: '[' const_expr ']' OF '{' typ_list '}'

   92 vardcl: NAME
   93       | NAME ':' CONST
   94       | NAME '[' const_expr ']'
   95       | NAME '[' NAME ']'

   96 varref: cmpnd

   97 pfld: NAME

   98 $@12: %empty

   99 pfld: NAME $@12 '[' expr ']'

  100 $@13: %empty

  101 cmpnd: pfld $@13 sfld

  102 sfld: %empty
  103     | '.' cmpnd

  104 stmnt: Special
  105      | Stmnt

  106 $@14: %empty

  107 for_pre: FOR l_par $@14 varref

  108 for_post: '{' sequence OS '}'

  109 $@15: %empty

  110 Special: varref RCV $@15 rargs

  111 $@16: %empty

  112 Special: varref SND $@16 margs

  113 $@17: %empty

  114 Special: for_pre ':' expr DOTDOT expr r_par $@17 for_post

  115 @18: %empty

  116 Special: for_pre IN varref r_par @18 for_post
  117        | SELECT l_par varref ':' expr DOTDOT expr r_par
  118        | IF options FI

  119 $@19: %empty

  120 Special: DO $@19 options OD
  121        | BREAK
  122        | GOTO NAME
  123        | NAME ':' stmnt
  124        | NAME ':'
  125        | error

  126 Stmnt: varref ASGN full_expr
  127      | varref INCR
  128      | varref DECR
  129      | SET_P l_par two_args r_par

  130 $@20: %empty

  131 Stmnt: PRINT l_par STRING $@20 prargs r_par
  132      | PRINTM l_par varref r_par
  133      | PRINTM l_par CONST r_par
  134      | ASSERT full_expr
  135      | ccode

  136 $@21: %empty

  137 Stmnt: varref R_RCV $@21 rargs

  138 $@22: %empty

  139 Stmnt: varref RCV $@22 LT rargs GT

  140 $@23: %empty

  141 Stmnt: varref R_RCV $@23 LT rargs GT

  142 $@24: %empty

  143 Stmnt: varref O_SND $@24 margs
  144      | full_expr
  145      | ELSE

  146 $@25: %empty

  147 Stmnt: ATOMIC '{' $@25 sequence OS '}'

  148 $@26: %empty

  149 Stmnt: D_STEP '{' $@26 sequence OS '}'

  150 $@27: %empty

  151 Stmnt: '{' $@27 sequence OS '}'

  152 $@28: %empty

  153 $@29: %empty

  154 Stmnt: INAME $@28 l_par args r_par $@29 Stmnt

  155 $@30: %empty

  156 $@31: %empty

  157 Stmnt: varref ASGN INAME $@30 l_par args r_par $@31 Stmnt
  158      | RETURN full_expr

  159 options: option
  160        | option options

  161 $@32: %empty

  162 option: SEP $@32 sequence OS

  163 OS: %empty
  164   | semi

  165 semi: SEMI
  166     | ARROW

  167 MS: semi
  168   | MS semi

  169 aname: NAME
  170      | PNAME

  171 const_expr: CONST
  172           | '-' const_expr
  173           | l_par const_expr r_par
  174           | const_expr '+' const_expr
  175           | const_expr '-' const_expr
  176           | const_expr '*' const_expr
  177           | const_expr '/' const_expr
  178           | const_expr '%' const_expr

  179 expr: l_par expr r_par
  180     | expr '+' expr
  181     | expr '-' expr
  182     | expr '*' expr
  183     | expr '/' expr
  184     | expr '%' expr
  185     | expr '&' expr
  186     | expr '^' expr
  187     | expr '|' expr
  188     | expr GT expr
  189     | expr LT expr
  190     | expr GE expr
  191     | expr LE expr
  192     | expr EQ expr
  193     | expr NE expr
  194     | expr AND expr
  195     | expr OR expr
  196     | expr LSHIFT expr
  197     | expr RSHIFT expr
  198     | '~' expr
  199     | '-' expr
  200     | SND expr
  201     | l_par expr ARROW expr ':' expr r_par

  202 $@33: %empty

  203 expr: RUN aname $@33 l_par args r_par Opt_priority
  204     | LEN l_par varref r_par
  205     | ENABLED l_par expr r_par
  206     | GET_P l_par expr r_par

  207 $@34: %empty

  208 expr: varref RCV $@34 '[' rargs ']'

  209 $@35: %empty

  210 expr: varref R_RCV $@35 '[' rargs ']'
  211     | varref
  212     | cexpr
  213     | CONST
  214     | TIMEOUT
  215     | NONPROGRESS
  216     | PC_VAL l_par expr r_par
  217     | PNAME '[' expr ']' '@' NAME
  218     | PNAME '[' expr ']' ':' pfld
  219     | PNAME '@' NAME
  220     | PNAME ':' pfld
  221     | ltl_expr

  222 Opt_priority: %empty
  223             | PRIORITY CONST

  224 full_expr: expr
  225          | Expr

  226 ltl_expr: expr UNTIL expr
  227         | expr RELEASE expr
  228         | expr WEAK_UNTIL expr
  229         | expr IMPLIES expr
  230         | expr EQUIV expr
  231         | NEXT expr
  232         | ALWAYS expr
  233         | EVENTUALLY expr

  234 Expr: Probe
  235     | l_par Expr r_par
  236     | Expr AND Expr
  237     | Expr AND expr
  238     | expr AND Expr
  239     | Expr OR Expr
  240     | Expr OR expr
  241     | expr OR Expr

  242 Probe: FULL l_par varref r_par
  243      | NFULL l_par varref r_par
  244      | EMPTY l_par varref r_par
  245      | NEMPTY l_par varref r_par

  246 Opt_enabler: %empty
  247            | PROVIDED l_par full_expr r_par
  248            | PROVIDED error

  249 basetype: TYPE
  250         | UNAME
  251         | error

  252 typ_list: basetype
  253         | basetype ',' typ_list

  254 two_args: expr ',' expr

  255 args: %empty
  256     | arg

  257 prargs: %empty
  258       | ',' arg

  259 margs: arg
  260      | expr l_par arg r_par

  261 arg: expr
  262    | expr ',' arg

  263 rarg: varref
  264     | EVAL l_par expr r_par
  265     | CONST
  266     | '-' CONST

  267 rargs: rarg
  268      | rarg ',' rargs
  269      | rarg l_par rargs r_par
  270      | l_par rargs r_par

  271 nlst: NAME
  272     | nlst NAME
  273     | nlst ','


Terminals, with rules where they appear

$end (0) 0
'%' (37) 178 184
'&' (38) 185
'(' (40) 15
')' (41) 16
'*' (42) 176 182
'+' (43) 174 180
',' (44) 82 84 86 253 254 258 262 268 273
'-' (45) 172 175 181 199 266
'.' (46) 103
'/' (47) 177 183
':' (58) 62 63 93 114 117 123 124 201 218 220
'@' (64) 217 219
'[' (91) 24 25 91 94 95 99 208 210 217 218
']' (93) 24 25 91 94 95 99 208 210 217 218
'^' (94) 186
'{' (123) 30 41 57 76 88 91 108 147 149 151
'|' (124) 187
'}' (125) 30 41 57 76 88 91 108 147 149 151
'~' (126) 198
error (256) 14 31 67 125 248 251
ASSERT (258) 134
PRINT (259) 131
PRINTM (260) 132 133
PREPROC (261)
C_CODE (262) 52
C_DECL (263) 53
C_EXPR (264) 54
C_STATE (265) 48 50
C_TRACK (266) 49 51
RUN (267) 203
LEN (268) 204
ENABLED (269) 205
SET_P (270) 129
GET_P (271) 206
EVAL (272) 264
PC_VAL (273) 216
TYPEDEF (274) 41
MTYPE (275)
INLINE (276) 45
RETURN (277) 158
LABEL (278)
OF (279) 91
GOTO (280) 122
BREAK (281) 121
ELSE (282) 145
SEMI (283) 78 165
ARROW (284) 166 201
IF (285) 118
FI (286) 118
DO (287) 120
OD (288) 120
FOR (289) 107
SELECT (290) 117
IN (291) 116
SEP (292) 162
DOTDOT (293) 114 117
ATOMIC (294) 147
NON_ATOMIC (295)
D_STEP (296) 149
UNLESS (297) 66
TIMEOUT (298) 214
NONPROGRESS (299) 215
ACTIVE (300) 23 24 25
PROCTYPE (301) 20
D_PROCTYPE (302) 21
HIDDEN (303) 69
SHOW (304) 70
ISLOCAL (305) 71
PRIORITY (306) 223
PROVIDED (307) 247 248
FULL (308) 242
EMPTY (309) 244
NFULL (310) 243
NEMPTY (311) 245
CONST (312) 85 86 93 133 171 213 223 265 266
TYPE (313) 74 76 249
XU (314) 61 63
NAME (315) 19 25 35 37 41 42 62 63 92 93 94 95 97 99 122 123 124 169
    217 219 271 272
UNAME (316) 75 250
PNAME (317) 170 217 218 219 220
INAME (318) 43 154 157
STRING (319) 48 49 50 51 131
CLAIM (320) 33
TRACE (321) 39
INIT (322) 27
LTL (323) 29
ASGN (324) 73 88 89 90 126 157
SND (325) 112 200
O_SND (326) 143
RCV (327) 110 139 208
R_RCV (328) 137 141 210
IMPLIES (329) 229
EQUIV (330) 230
OR (331) 195 239 240 241
AND (332) 194 236 237 238
ALWAYS (333) 232
EVENTUALLY (334) 233
UNTIL (335) 226
WEAK_UNTIL (336) 228
RELEASE (337) 227
NEXT (338) 231
EQ (339) 192
NE (340) 193
GT (341) 139 141 188
LT (342) 139 141 189
GE (343) 190
LE (344) 191
LSHIFT (345) 196
RSHIFT (346) 197
INCR (347) 127
DECR (348) 128
UMIN (349)
NEG (350)
DOT (351)


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
program (117)
    on left: 1, on right: 0
units (118)
    on left: 2 3, on right: 1 3
unit (119)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 2 3
l_par (120)
    on left: 15, on right: 19 45 107 117 129 131 132 133 154 157 173
    179 201 203 204 205 206 216 235 242 243 244 245 247 260 264 269
    270
r_par (121)
    on left: 16, on right: 19 45 114 116 117 129 131 132 133 154 157
    173 179 201 203 204 205 206 216 235 242 243 244 245 247 260 264
    269 270
proc (122)
    on left: 19, on right: 4
$@1 (123)
    on left: 17, on right: 19
$@2 (124)
    on left: 18, on right: 19
proctype (125)
    on left: 20 21, on right: 19
inst (126)
    on left: 22 23 24 25, on right: 19
init (127)
    on left: 27, on right: 5
$@3 (128)
    on left: 26, on right: 27
ltl (129)
    on left: 29, on right: 7
$@4 (130)
    on left: 28, on right: 29
ltl_body (131)
    on left: 30 31, on right: 29
claim (132)
    on left: 33, on right: 6
$@5 (133)
    on left: 32, on right: 33
optname (134)
    on left: 34 35, on right: 33
optname2 (135)
    on left: 36 37, on right: 29
events (136)
    on left: 39, on right: 8
$@6 (137)
    on left: 38, on right: 39
utype (138)
    on left: 41, on right: 10
$@7 (139)
    on left: 40, on right: 41
nm (140)
    on left: 42 43, on right: 45
ns (141)
    on left: 45, on right: 12
$@8 (142)
    on left: 44, on right: 45
c_fcts (143)
    on left: 46 47, on right: 11
cstate (144)
    on left: 48 49 50 51, on right: 47
ccode (145)
    on left: 52 53, on right: 46 135
cexpr (146)
    on left: 54, on right: 212
body (147)
    on left: 57, on right: 19 27 33 39
$@9 (148)
    on left: 55, on right: 57
$@10 (149)
    on left: 56, on right: 57
sequence (150)
    on left: 58 59, on right: 57 59 108 147 149 151 162
step (151)
    on left: 60 61 62 63 64 66 67, on right: 58 59
$@11 (152)
    on left: 65, on right: 66
vis (153)
    on left: 68 69 70 71, on right: 74 75 76
asgn (154)
    on left: 72 73, on right: 76
one_decl (155)
    on left: 74 75 76, on right: 9 60 62 77 78
decl_lst (156)
    on left: 77 78, on right: 41 78 80
decl (157)
    on left: 79 80, on right: 19
vref_lst (158)
    on left: 81 82, on right: 61 82
var_list (159)
    on left: 83 84, on right: 74 75 84
c_list (160)
    on left: 85 86, on right: 86 88
ivar (161)
    on left: 87 88 89 90, on right: 83 84
ch_init (162)
    on left: 91, on right: 90
vardcl (163)
    on left: 92 93 94 95, on right: 87 88 89 90
varref (164)
    on left: 96, on right: 81 82 107 110 112 116 117 126 127 128 132
    137 139 141 143 157 204 208 210 211 242 243 244 245 263
pfld (165)
    on left: 97 99, on right: 101 218 220
$@12 (166)
    on left: 98, on right: 99
cmpnd (167)
    on left: 101, on right: 96 103
$@13 (168)
    on left: 100, on right: 101
sfld (169)
    on left: 102 103, on right: 101
stmnt (170)
    on left: 104 105, on right: 64 66 123
for_pre (171)
    on left: 107, on right: 114 116
$@14 (172)
    on left: 106, on right: 107
for_post (173)
    on left: 108, on right: 114 116
Special (174)
    on left: 110 112 114 116 117 118 120 121 122 123 124 125, on right:
    104
$@15 (175)
    on left: 109, on right: 110
$@16 (176)
    on left: 111, on right: 112
$@17 (177)
    on left: 113, on right: 114
@18 (178)
    on left: 115, on right: 116
$@19 (179)
    on left: 119, on right: 120
Stmnt (180)
    on left: 126 127 128 129 131 132 133 134 135 137 139 141 143 144
    145 147 149 151 154 157 158, on right: 105 154 157
$@20 (181)
    on left: 130, on right: 131
$@21 (182)
    on left: 136, on right: 137
$@22 (183)
    on left: 138, on right: 139
$@23 (184)
    on left: 140, on right: 141
$@24 (185)
    on left: 142, on right: 143
$@25 (186)
    on left: 146, on right: 147
$@26 (187)
    on left: 148, on right: 149
$@27 (188)
    on left: 150, on right: 151
$@28 (189)
    on left: 152, on right: 154
$@29 (190)
    on left: 153, on right: 154
$@30 (191)
    on left: 155, on right: 157
$@31 (192)
    on left: 156, on right: 157
options (193)
    on left: 159 160, on right: 118 120 160
option (194)
    on left: 162, on right: 159 160
$@32 (195)
    on left: 161, on right: 162
OS (196)
    on left: 163 164, on right: 30 57 108 147 149 151 162
semi (197)
    on left: 165 166, on right: 13 164 167 168
MS (198)
    on left: 167 168, on right: 59 168
aname (199)
    on left: 169 170, on right: 203
const_expr (200)
    on left: 171 172 173 174 175 176 177 178, on right: 24 91 94 172
    173 174 175 176 177 178
expr (201)
    on left: 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 198 199 200 201 203 204 205 206 208 210 211
    212 213 214 215 216 217 218 219 220 221, on right: 89 99 114 117
    179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 205 206 216 217 218 224 226 227 228
    229 230 231 232 233 237 238 240 241 254 260 261 262 264
$@33 (202)
    on left: 202, on right: 203
$@34 (203)
    on left: 207, on right: 208
$@35 (204)
    on left: 209, on right: 210
Opt_priority (205)
    on left: 222 223, on right: 19 27 203
full_expr (206)
    on left: 224 225, on right: 30 126 134 144 158 247
ltl_expr (207)
    on left: 226 227 228 229 230 231 232 233, on right: 221
Expr (208)
    on left: 234 235 236 237 238 239 240 241, on right: 225 235 236
    237 238 239 240 241
Probe (209)
    on left: 242 243 244 245, on right: 234
Opt_enabler (210)
    on left: 246 247 248, on right: 19
basetype (211)
    on left: 249 250 251, on right: 252 253
typ_list (212)
    on left: 252 253, on right: 91 253
two_args (213)
    on left: 254, on right: 129
args (214)
    on left: 255 256, on right: 45 154 157 203
prargs (215)
    on left: 257 258, on right: 131
margs (216)
    on left: 259 260, on right: 112 143
arg (217)
    on left: 261 262, on right: 256 258 259 260 262
rarg (218)
    on left: 263 264 265 266, on right: 267 268 269
rargs (219)
    on left: 267 268 269 270, on right: 110 137 139 141 208 210 268
    269 270
nlst (220)
    on left: 271 272 273, on right: 76 272 273


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 68 (vis)
    UNAME       reduce using rule 68 (vis)

    program   go to state 18
    units     go to state 19
    unit      go to state 20
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 1

   14 unit: error .

    $default  reduce using rule 14 (unit)


State 2

   52 ccode: C_CODE .

    $default  reduce using rule 52 (ccode)


State 3

   53 ccode: C_DECL .

    $default  reduce using rule 53 (ccode)


State 4

   48 cstate: C_STATE . STRING STRING
   50       | C_STATE . STRING STRING STRING

    STRING  shift, and go to state 35


State 5

   49 cstate: C_TRACK . STRING STRING
   51       | C_TRACK . STRING STRING STRING

    STRING  shift, and go to state 36


State 6

   41 utype: TYPEDEF . NAME '{' $@7 decl_lst '}'

    NAME  shift, and go to state 37


State 7

   45 ns: INLINE . nm l_par $@8 args r_par

    NAME   shift, and go to state 38
    INAME  shift, and go to state 39

    nm  go to state 40


State 8

  165 semi: SEMI .

    $default  reduce using rule 165 (semi)


State 9

  166 semi: ARROW .

    $default  reduce using rule 166 (semi)


State 10

   23 inst: ACTIVE .
   24     | ACTIVE . '[' const_expr ']'
   25     | ACTIVE . '[' NAME ']'

    '['  shift, and go to state 41

    $default  reduce using rule 23 (inst)


State 11

   69 vis: HIDDEN .

    $default  reduce using rule 69 (vis)


State 12

   70 vis: SHOW .

    $default  reduce using rule 70 (vis)


State 13

   71 vis: ISLOCAL .

    $default  reduce using rule 71 (vis)


State 14

   33 claim: CLAIM . optname $@5 body

    NAME  shift, and go to state 42

    $default  reduce using rule 34 (optname)

    optname  go to state 43


State 15

   39 events: TRACE . $@6 body

    $default  reduce using rule 38 ($@6)

    $@6  go to state 44


State 16

   27 init: INIT . $@3 Opt_priority body

    $default  reduce using rule 26 ($@3)

    $@3  go to state 45


State 17

   29 ltl: LTL . optname2 $@4 ltl_body

    NAME  shift, and go to state 46

    $default  reduce using rule 36 (optname2)

    optname2  go to state 47


State 18

    0 $accept: program . $end

    $end  shift, and go to state 48


State 19

    1 program: units .
    3 units: units . unit

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    $end        reduce using rule 1 (program)
    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 68 (vis)
    UNAME       reduce using rule 68 (vis)

    unit      go to state 49
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 20

    2 units: unit .

    $default  reduce using rule 2 (units)


State 21

    4 unit: proc .

    $default  reduce using rule 4 (unit)


State 22

   19 proc: inst . proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    PROCTYPE    shift, and go to state 50
    D_PROCTYPE  shift, and go to state 51

    proctype  go to state 52


State 23

    5 unit: init .

    $default  reduce using rule 5 (unit)


State 24

    7 unit: ltl .

    $default  reduce using rule 7 (unit)


State 25

    6 unit: claim .

    $default  reduce using rule 6 (unit)


State 26

    8 unit: events .

    $default  reduce using rule 8 (unit)


State 27

   10 unit: utype .

    $default  reduce using rule 10 (unit)


State 28

   12 unit: ns .

    $default  reduce using rule 12 (unit)


State 29

   11 unit: c_fcts .

    $default  reduce using rule 11 (unit)


State 30

   47 c_fcts: cstate .

    $default  reduce using rule 47 (c_fcts)


State 31

   46 c_fcts: ccode .

    $default  reduce using rule 46 (c_fcts)


State 32

   74 one_decl: vis . TYPE var_list
   75         | vis . UNAME var_list
   76         | vis . TYPE asgn '{' nlst '}'

    TYPE   shift, and go to state 53
    UNAME  shift, and go to state 54


State 33

    9 unit: one_decl .

    $default  reduce using rule 9 (unit)


State 34

   13 unit: semi .

    $default  reduce using rule 13 (unit)


State 35

   48 cstate: C_STATE STRING . STRING
   50       | C_STATE STRING . STRING STRING

    STRING  shift, and go to state 55


State 36

   49 cstate: C_TRACK STRING . STRING
   51       | C_TRACK STRING . STRING STRING

    STRING  shift, and go to state 56


State 37

   41 utype: TYPEDEF NAME . '{' $@7 decl_lst '}'

    '{'  shift, and go to state 57


State 38

   42 nm: NAME .

    $default  reduce using rule 42 (nm)


State 39

   43 nm: INAME .

    $default  reduce using rule 43 (nm)


State 40

   45 ns: INLINE nm . l_par $@8 args r_par

    '('  shift, and go to state 58

    l_par  go to state 59


State 41

   24 inst: ACTIVE '[' . const_expr ']'
   25     | ACTIVE '[' . NAME ']'

    CONST  shift, and go to state 60
    NAME   shift, and go to state 61
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 64


State 42

   35 optname: NAME .

    $default  reduce using rule 35 (optname)


State 43

   33 claim: CLAIM optname . $@5 body

    $default  reduce using rule 32 ($@5)

    $@5  go to state 65


State 44

   39 events: TRACE $@6 . body

    '{'  shift, and go to state 66

    body  go to state 67


State 45

   27 init: INIT $@3 . Opt_priority body

    PRIORITY  shift, and go to state 68

    $default  reduce using rule 222 (Opt_priority)

    Opt_priority  go to state 69


State 46

   37 optname2: NAME .

    $default  reduce using rule 37 (optname2)


State 47

   29 ltl: LTL optname2 . $@4 ltl_body

    $default  reduce using rule 28 ($@4)

    $@4  go to state 70


State 48

    0 $accept: program $end .

    $default  accept


State 49

    3 units: units unit .

    $default  reduce using rule 3 (units)


State 50

   20 proctype: PROCTYPE .

    $default  reduce using rule 20 (proctype)


State 51

   21 proctype: D_PROCTYPE .

    $default  reduce using rule 21 (proctype)


State 52

   19 proc: inst proctype . NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    NAME  shift, and go to state 71


State 53

   74 one_decl: vis TYPE . var_list
   76         | vis TYPE . asgn '{' nlst '}'

    NAME  shift, and go to state 72
    ASGN  shift, and go to state 73

    $default  reduce using rule 72 (asgn)

    asgn      go to state 74
    var_list  go to state 75
    ivar      go to state 76
    vardcl    go to state 77


State 54

   75 one_decl: vis UNAME . var_list

    NAME  shift, and go to state 72

    var_list  go to state 78
    ivar      go to state 76
    vardcl    go to state 77


State 55

   48 cstate: C_STATE STRING STRING .
   50       | C_STATE STRING STRING . STRING

    STRING  shift, and go to state 79

    $default  reduce using rule 48 (cstate)


State 56

   49 cstate: C_TRACK STRING STRING .
   51       | C_TRACK STRING STRING . STRING

    STRING  shift, and go to state 80

    $default  reduce using rule 49 (cstate)


State 57

   41 utype: TYPEDEF NAME '{' . $@7 decl_lst '}'

    $default  reduce using rule 40 ($@7)

    $@7  go to state 81


State 58

   15 l_par: '(' .

    $default  reduce using rule 15 (l_par)


State 59

   45 ns: INLINE nm l_par . $@8 args r_par

    $default  reduce using rule 44 ($@8)

    $@8  go to state 82


State 60

  171 const_expr: CONST .

    $default  reduce using rule 171 (const_expr)


State 61

   25 inst: ACTIVE '[' NAME . ']'

    ']'  shift, and go to state 83


State 62

  172 const_expr: '-' . const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 84


State 63

  173 const_expr: l_par . const_expr r_par

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 85


State 64

   24 inst: ACTIVE '[' const_expr . ']'
  174 const_expr: const_expr . '+' const_expr
  175           | const_expr . '-' const_expr
  176           | const_expr . '*' const_expr
  177           | const_expr . '/' const_expr
  178           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ']'  shift, and go to state 91


State 65

   33 claim: CLAIM optname $@5 . body

    '{'  shift, and go to state 66

    body  go to state 92


State 66

   57 body: '{' . $@9 sequence OS $@10 '}'

    $default  reduce using rule 55 ($@9)

    $@9  go to state 93


State 67

   39 events: TRACE $@6 body .

    $default  reduce using rule 39 (events)


State 68

  223 Opt_priority: PRIORITY . CONST

    CONST  shift, and go to state 94


State 69

   27 init: INIT $@3 Opt_priority . body

    '{'  shift, and go to state 66

    body  go to state 95


State 70

   29 ltl: LTL optname2 $@4 . ltl_body

    error  shift, and go to state 96
    '{'    shift, and go to state 97

    ltl_body  go to state 98


State 71

   19 proc: inst proctype NAME . $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    $default  reduce using rule 17 ($@1)

    $@1  go to state 99


State 72

   92 vardcl: NAME .
   93       | NAME . ':' CONST
   94       | NAME . '[' const_expr ']'
   95       | NAME . '[' NAME ']'

    '['  shift, and go to state 100
    ':'  shift, and go to state 101

    $default  reduce using rule 92 (vardcl)


State 73

   73 asgn: ASGN .

    $default  reduce using rule 73 (asgn)


State 74

   76 one_decl: vis TYPE asgn . '{' nlst '}'

    '{'  shift, and go to state 102


State 75

   74 one_decl: vis TYPE var_list .

    $default  reduce using rule 74 (one_decl)


State 76

   83 var_list: ivar .
   84         | ivar . ',' var_list

    ','  shift, and go to state 103

    $default  reduce using rule 83 (var_list)


State 77

   87 ivar: vardcl .
   88     | vardcl . ASGN '{' c_list '}'
   89     | vardcl . ASGN expr
   90     | vardcl . ASGN ch_init

    ASGN  shift, and go to state 104

    $default  reduce using rule 87 (ivar)


State 78

   75 one_decl: vis UNAME var_list .

    $default  reduce using rule 75 (one_decl)


State 79

   50 cstate: C_STATE STRING STRING STRING .

    $default  reduce using rule 50 (cstate)


State 80

   51 cstate: C_TRACK STRING STRING STRING .

    $default  reduce using rule 51 (cstate)


State 81

   41 utype: TYPEDEF NAME '{' $@7 . decl_lst '}'

    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13

    $default  reduce using rule 68 (vis)

    vis       go to state 32
    one_decl  go to state 105
    decl_lst  go to state 106


State 82

   45 ns: INLINE nm l_par $@8 . args r_par

    C_EXPR       shift, and go to state 107
    RUN          shift, and go to state 108
    LEN          shift, and go to state 109
    ENABLED      shift, and go to state 110
    GET_P        shift, and go to state 111
    PC_VAL       shift, and go to state 112
    TIMEOUT      shift, and go to state 113
    NONPROGRESS  shift, and go to state 114
    CONST        shift, and go to state 115
    NAME         shift, and go to state 116
    PNAME        shift, and go to state 117
    SND          shift, and go to state 118
    ALWAYS       shift, and go to state 119
    EVENTUALLY   shift, and go to state 120
    NEXT         shift, and go to state 121
    '-'          shift, and go to state 122
    '~'          shift, and go to state 123
    '('          shift, and go to state 58

    $default  reduce using rule 255 (args)

    l_par     go to state 124
    cexpr     go to state 125
    varref    go to state 126
    pfld      go to state 127
    cmpnd     go to state 128
    expr      go to state 129
    ltl_expr  go to state 130
    args      go to state 131
    arg       go to state 132


State 83

   25 inst: ACTIVE '[' NAME ']' .

    $default  reduce using rule 25 (inst)


State 84

  172 const_expr: '-' const_expr .
  174           | const_expr . '+' const_expr
  175           | const_expr . '-' const_expr
  176           | const_expr . '*' const_expr
  177           | const_expr . '/' const_expr
  178           | const_expr . '%' const_expr

    $default  reduce using rule 172 (const_expr)


State 85

  173 const_expr: l_par const_expr . r_par
  174           | const_expr . '+' const_expr
  175           | const_expr . '-' const_expr
  176           | const_expr . '*' const_expr
  177           | const_expr . '/' const_expr
  178           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ')'  shift, and go to state 133

    r_par  go to state 134


State 86

  174 const_expr: const_expr '+' . const_expr
